[gd_scene format=3 uid="uid://cw8cw6fpq5n63"]

[ext_resource type="Script" uid="uid://c306bigp8honi" path="res://src/scenes/player/player.gd" id="1_uug8f"]
[ext_resource type="Texture2D" uid="uid://cbu38jscfl0o" path="res://assets/sprites/player/player_v2.png" id="3_4r4qr"]
[ext_resource type="Script" uid="uid://td15gffk6sym" path="res://src/scripts/components/states/state_machine.gd" id="3_7p4af"]
[ext_resource type="Texture2D" uid="uid://dqb15x3l5qeot" path="res://assets/sprites/player/AfterImage.png" id="3_tj7fb"]
[ext_resource type="Script" uid="uid://dx2ry6r7fymd8" path="res://src/scenes/player/states/idle_state.gd" id="4_3m013"]
[ext_resource type="Script" uid="uid://c7tiqqjpghksw" path="res://src/scenes/player/gapling_hook.gd" id="4_8vrmn"]
[ext_resource type="Texture2D" uid="uid://bcfjeeqq7rmrh" path="res://icon.svg" id="5_b7xrc"]
[ext_resource type="Script" uid="uid://smgwcfp3t3mr" path="res://src/scenes/player/states/move_state.gd" id="5_ii60e"]
[ext_resource type="Script" uid="uid://dcy2d5ldqq0er" path="res://src/scenes/player/states/fall_state.gd" id="6_8m0h4"]
[ext_resource type="AudioStream" uid="uid://35l4xnse0nlc" path="res://assets/sfx/SoundBonus.wav" id="6_xgv0w"]
[ext_resource type="Script" uid="uid://dqe7wjlt23sn6" path="res://src/scenes/player/states/jump_state.gd" id="7_q88xr"]
[ext_resource type="Script" uid="uid://d6ndn4vpff7p" path="res://src/scenes/player/states/walled_state.gd" id="8_6uujk"]
[ext_resource type="Script" uid="uid://behnqth2nvqyu" path="res://src/scenes/player/state_label.gd" id="8_yu3wn"]
[ext_resource type="Script" uid="uid://boph7py3wtet5" path="res://src/scenes/player/states/stomp_state.gd" id="9_i6xdb"]
[ext_resource type="Script" uid="uid://cy8rgltfy0nub" path="res://src/scenes/player/states/double_jump_state.gd" id="10_62cf5"]
[ext_resource type="Script" uid="uid://n0he4r7dkudr" path="res://src/scenes/player/states/dash_state.gd" id="12_3hyjg"]
[ext_resource type="Script" uid="uid://bkoh6pdkvl2wc" path="res://src/scenes/player/states/swing_state.gd" id="13_824xm"]
[ext_resource type="Script" uid="uid://dl2u2x131lawy" path="res://src/scenes/player/states/bounce_state.gd" id="18_oub3j"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i6xdb"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uug8f"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6uujk"]
size = Vector2(11, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6xdb"]
size = Vector2(13, 15)

[sub_resource type="Curve" id="Curve_4r4qr"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.12641083, 0), 0.0, 0.0, 0, 0, Vector2(0.5011286, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_wnjjo"]
resource_name = "Dash"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qtero"]
resource_name = "DoubleJump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_62cf5"]
resource_name = "Fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6uujk"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3hyjg"]
resource_name = "Jump"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tj7fb"]
resource_name = "Move"
length = 0.75
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07692308, 0.15384616, 0.23076923, 0.30769232, 0.3846154, 0.46153846, 0.53846157, 0.61538464, 0.6923077),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-2, -11), Vector2(-2, -10), Vector2(-2, -11), Vector2(-2, -10), Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i6xdb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8vrmn"]
resource_name = "Run"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45000002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(3, -9), Vector2(3, -10), Vector2(3, -9.5), Vector2(3, -10.945), Vector2(3, -10.945), Vector2(3, -9.5), Vector2(3, -10.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_74f0t"]
resource_name = "Spawn"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-3, -11), Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b7xrc"]
resource_name = "Stomp"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_824xm"]
resource_name = "Walled"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6xdb"]
_data = {
&"Dash": SubResource("Animation_wnjjo"),
&"DoubleJump": SubResource("Animation_qtero"),
&"Fall": SubResource("Animation_62cf5"),
&"Idle": SubResource("Animation_6uujk"),
&"Jump": SubResource("Animation_3hyjg"),
&"Move": SubResource("Animation_tj7fb"),
&"RESET": SubResource("Animation_i6xdb"),
&"Run": SubResource("Animation_8vrmn"),
&"Spawn": SubResource("Animation_74f0t"),
&"Stomp": SubResource("Animation_b7xrc"),
&"Walled": SubResource("Animation_824xm")
}

[node name="Player" type="CharacterBody2D" unique_id=515833137]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_uug8f")
controller_type = null
starting_facing_direction = null

[node name="Flippable" type="Node2D" parent="." unique_id=376239235]
texture_filter = 1

[node name="Sprite" type="Sprite2D" parent="Flippable" unique_id=1859604623]
self_modulate = Color(1.0789914, 1.0789914, 1.0789914, 1)
texture_filter = 1
position = Vector2(1, -8)
texture = ExtResource("3_4r4qr")
offset = Vector2(-1, 0)
hframes = 21

[node name="HatContainer" type="Node2D" parent="Flippable" unique_id=2082777664]
position = Vector2(-2, -11)

[node name="AfterImage" type="CPUParticles2D" parent="Flippable" unique_id=1240639241]
self_modulate = Color(1, 1, 1, 0.5)
show_behind_parent = true
material = SubResource("CanvasItemMaterial_i6xdb")
position = Vector2(-3, -1)
amount = 6
texture = ExtResource("3_tj7fb")
lifetime = 0.15000000000000002
gravity = Vector2(0, 0)

[node name="GaplingHook" type="Node2D" parent="Flippable" unique_id=566521433]
show_behind_parent = true
script = ExtResource("4_8vrmn")
rest_length = 0.1
stiffness = 40.0

[node name="GrapplingPoints" type="Node2D" parent="Flippable/GaplingHook" unique_id=1245188450]

[node name="RayCast2D" type="RayCast2D" parent="Flippable/GaplingHook/GrapplingPoints" unique_id=1473833710]
rotation = -2.268928
target_position = Vector2(0, 150)
collision_mask = 33

[node name="GrappleIndicator" type="Sprite2D" parent="Flippable/GaplingHook" unique_id=1760370689]
visible = false
position = Vector2(68, -68)
scale = Vector2(0.0546875, 0.0546875)
texture = ExtResource("5_b7xrc")

[node name="Line2D" type="Line2D" parent="Flippable/GaplingHook" unique_id=103796883]
show_behind_parent = true
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="PowerupSFX" type="AudioStreamPlayer" parent="." unique_id=1108406290]
stream = ExtResource("6_xgv0w")
volume_db = -25.0
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1173197085]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_uug8f")

[node name="InteractBox" type="Area2D" parent="." unique_id=703891723]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox" unique_id=1504633298]
visible = false
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_6uujk")

[node name="HurtBox" type="Area2D" parent="." unique_id=320738228]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" unique_id=2073333078]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_i6xdb")

[node name="ControllerContainer" type="Node" parent="." unique_id=910661373]

[node name="StateMachine" type="Node" parent="." unique_id=1905505156]
script = ExtResource("3_7p4af")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" unique_id=1703287815]
script = ExtResource("4_3m013")

[node name="Move" type="Node" parent="StateMachine" unique_id=1174257889]
script = ExtResource("5_ii60e")

[node name="Fall" type="Node" parent="StateMachine" unique_id=378533986]
script = ExtResource("6_8m0h4")

[node name="Jump" type="Node" parent="StateMachine" unique_id=1615644248]
script = ExtResource("7_q88xr")

[node name="Timer" type="Timer" parent="StateMachine/Jump" unique_id=1957238707]
one_shot = true

[node name="Walled" type="Node" parent="StateMachine" unique_id=618057474]
script = ExtResource("8_6uujk")
wall_slide_curve = SubResource("Curve_4r4qr")

[node name="DoubleJump" type="Node" parent="StateMachine" unique_id=113288851]
script = ExtResource("10_62cf5")

[node name="Timer" type="Timer" parent="StateMachine/DoubleJump" unique_id=1662395314]
one_shot = true

[node name="Stomp" type="Node" parent="StateMachine" unique_id=1801570448]
script = ExtResource("9_i6xdb")

[node name="Dash" type="Node" parent="StateMachine" unique_id=1482846064]
script = ExtResource("12_3hyjg")

[node name="Timer" type="Timer" parent="StateMachine/Dash" unique_id=1245084695]
wait_time = 0.25
one_shot = true

[node name="Grapple" type="Node" parent="StateMachine" unique_id=915589517]
script = ExtResource("13_824xm")

[node name="Bounce" type="Node" parent="StateMachine" unique_id=529725658]
script = ExtResource("18_oub3j")

[node name="Timer" type="Timer" parent="StateMachine/Bounce" unique_id=1805352055]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1214060380]
libraries/ = SubResource("AnimationLibrary_i6xdb")

[node name="StateLabel" type="Label" parent="." unique_id=1345352259]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 8
text = "State"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_yu3wn")

[connection signal="should_release" from="Flippable/GaplingHook" to="StateMachine/Grapple" method="_on_gapling_hook_should_release"]
[connection signal="area_entered" from="InteractBox" to="." method="_on_interact_box_area_entered"]
[connection signal="area_entered" from="InteractBox" to="StateMachine/Stomp" method="_on_interact_box_area_entered"]
[connection signal="area_exited" from="InteractBox" to="." method="_on_interact_box_area_exited"]
[connection signal="body_entered" from="InteractBox" to="." method="_on_interact_box_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="transitioned" from="StateMachine" to="StateLabel" method="_on_state_machine_transitioned"]
